Maintain Card Number Issue

--- a/test-resources/config.properties
+++ b/test-resources/config.properties
@@ -1,8 +1,9 @@
-Browser = chrome
+Browser1 = chrome
+Browser2 = edge
 Base_URL = https://weathershopper.pythonanywhere.com/
 Email = testdemo@weather.com
 Card_Number = 4242424242424242
-Expiry_Date = 0924
+Expiry_Date =1224
 CVC_Number = 789
 Zip_Code = 9837
 Wait_time = 15
